fix: menu trigger visibility

--- a/src/components/layouts/shell/shell.module.css
+++ b/src/components/layouts/shell/shell.module.css
@@ -45,7 +45,7 @@
   bottom: max(env(--space-24), calc(env(safe-area-inset-bottom) * 1.2));
   z-index: 3;
 
-  @media (--from-small) {
+  @media (--from-large) {
     display: none;
   }
 }
